--- a/app/src/main/res/layout/include_post_author.xml
+++ b/app/src/main/res/layout/include_post_author.xml
@@ -8,7 +8,7 @@
     >
 
     <TextView
-        android:id="@+id/tv_postCategory"
+        android:id="@+id/tv_post_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
