--- a/app/src/main/res/layout/activity_club.xml
+++ b/app/src/main/res/layout/activity_club.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:background="#012038"
     android:orientation="vertical"
-    tools:context=".app.club.Club_New_Activity">
+    >
 
     <ScrollView
         android:layout_width="match_parent"
@@ -34,7 +34,7 @@
                     android:text="모임 만들기" />
 
                 <EditText
-                    android:id="@+id/club_title"
+                    android:id="@+id/et_club_title"
                     style="@style/club_new_edittext"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -63,7 +63,7 @@
                     android:text="Location" />
 
                 <EditText
-                    android:id="@+id/club_location_text"
+                    android:id="@+id/et_club_location"
                     style="@style/club_new_location_editText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -91,7 +91,7 @@
                     android:text="Category" />
 
                 <RadioGroup
-                    android:id="@+id/radio_category1"
+                    android:id="@+id/rg_01"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
@@ -100,7 +100,7 @@
 
 
                     <RadioButton
-                        android:id="@+id/check_club_1"
+                        android:id="@+id/rb_photo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
@@ -113,7 +113,7 @@
 
 
                     <RadioButton
-                        android:id="@+id/check_club_2"
+                        android:id="@+id/rb_sports"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
@@ -125,7 +125,7 @@
                         android:textColor="#252837" />
 
                     <RadioButton
-                        android:id="@+id/check_club_3"
+                        android:id="@+id/rb_culture"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
@@ -137,7 +137,7 @@
                         android:textColor="#252837" />
 
                     <RadioButton
-                        android:id="@+id/check_club_4"
+                        android:id="@+id/rb_read"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
@@ -155,11 +155,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:id="@+id/radio_category2"
+                    android:id="@+id/rg_02"
                     android:orientation="horizontal">
 
                     <RadioButton
-                        android:id="@+id/check_club_5"
+                        android:id="@+id/rb_game"
                         android:layout_weight="1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -171,7 +171,7 @@
 
 
                     <RadioButton
-                        android:id="@+id/check_club_6"
+                        android:id="@+id/rb_social"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
@@ -182,7 +182,7 @@
                         android:textColor="#252837" />
 
                     <RadioButton
-                        android:id="@+id/check_club_7"
+                        android:id="@+id/rb_pet"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
@@ -193,7 +193,7 @@
                         android:textColor="#252837" />
 
                     <RadioButton
-                        android:id="@+id/check_club_8"
+                        android:id="@+id/rb_etc"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
@@ -250,7 +250,7 @@
                             android:text="Time/Date" />
 
                         <TextView
-                            android:id="@+id/club_new_date_text"
+                            android:id="@+id/tv_club_date"
                             style="@style/club_new_text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -259,7 +259,7 @@
                             android:textColor="#484E6A" />
 
                         <TextView
-                            android:id="@+id/club_new_time_text"
+                            android:id="@+id/tv_club_time"
                             style="@style/club_new_text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -277,7 +277,7 @@
 
 
                         <Button
-                            android:id="@+id/club_new_date_btn"
+                            android:id="@+id/btn_club_date"
                             android:layout_width="90dp"
                             android:layout_height="30dp"
                             android:background="@drawable/round_price_btn2"
@@ -285,7 +285,7 @@
                             android:textColor="#B5B5B5" />
 
                         <Button
-                            android:id="@+id/club_new_time_btn"
+                            android:id="@+id/btn_club_time"
                             android:layout_width="90dp"
                             android:layout_height="30dp"
                             android:layout_marginLeft="5dp"
@@ -322,7 +322,7 @@
                             android:text="Price" />
 
                         <TextView
-                            android:id="@+id/club_new_price_text"
+                            android:id="@+id/tv_club_price"
                             style="@style/club_new_text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -378,7 +378,7 @@
                         android:layout_weight="1" />
 
                     <EditText
-                        android:id="@+id/club_new_intro"
+                        android:id="@+id/et_club_intro"
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
                         android:background="@drawable/round_club_intro"
@@ -392,7 +392,7 @@
                 </LinearLayout>
 
                 <Button
-                    android:id="@+id/club_new_btn"
+                    android:id="@+id/btn_club_new"
                     style="@style/main_loginBtn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
