--- a/app/src/main/res/layout/activity_mapy.xml
+++ b/app/src/main/res/layout/activity_mapy.xml
@@ -25,7 +25,7 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/club_title"
+                android:id="@+id/et_club_title"
                 style="@style/map_location_no"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
