--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     android:background="#012038"
     android:orientation="vertical"
-
     >
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -25,84 +24,13 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <ImageView
+        <FrameLayout
+            android:id="@+id/fr_chat"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/bg" />
+            android:layout_height="wrap_content"/>
 
-        <View
-            android:layout_width="wrap_content"
-            android:layout_height="4dp"
-            android:layout_marginTop="120dp"
-            android:background="#000000" />
-
-        <TextView
-            android:id="@+id/et_chatTitle"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_marginTop="50dp"
-            android:fontFamily="@font/serif_b"
-            android:gravity="center"
-            android:text="게임 모이자"
-            android:textColor="#000000"
-            android:textSize="20sp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="120dp"
-                android:layout_weight="1">
-
-                <ListView
-                    android:id="@+id/lv_chatView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginRight="20dp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:background="#ffffff"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <EditText
-                    android:id="@+id/et_chatEdit"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_weight="0.8"
-                    android:hint="채팅창 입력"
-                    android:maxLines="1"
-                    android:textColor="#000000"
-                    android:textColorHint="#B5B5B5"
-                    android:textSize="12sp" />
-
-                <Button
-                    android:id="@+id/btn_chatSent"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp"
-                    android:background="@drawable/round_btn"
-                    android:backgroundTint="#FBCE02"
-                    android:text="Chat"
-                    android:textSize="10sp" />
-
-            </LinearLayout>
-
-        </LinearLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
+<!--
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nv_main"
         android:layout_width="wrap_content"
@@ -112,6 +40,6 @@
         android:backgroundTint="#000000"
         app:headerLayout="@layout/side_bar"
         app:itemTextColor="#ffffff"
-        app:menu="@menu/nav_item" />
+        app:menu="@menu/nav_item" />-->
 
 </androidx.drawerlayout.widget.DrawerLayout>
