--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -6,21 +6,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#ffffff"
-    tools:context=".app.mypage.MypageActivity">
+    android:background="#ffffff">
 
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.google.android.material.appbar.AppBarLayout
+      <!--  <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <include layout="@layout/tb_main" />
 
-        </com.google.android.material.appbar.AppBarLayout>
+        </com.google.android.material.appbar.AppBarLayout>-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -75,6 +74,7 @@
         </LinearLayout>
 
 
+<!--
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs2"
             android:layout_width="match_parent"
@@ -83,6 +83,7 @@
             android:background="#ffffff"
             app:tabIndicatorColor="#000000"
             app:tabTextColor="#000000" />
+-->
 
 
         <!--완료한 즐겨찾기-->
