--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -5,15 +5,14 @@
     android:id="@+id/drawer_layout4"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".app.search.SearchActivity">
+    android:orientation="vertical">
 
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.google.android.material.appbar.AppBarLayout
+       <!-- <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
@@ -29,7 +28,7 @@
                 android:layout_marginTop="1dp"
                 app:tabTextColor="#000000" />
 
-        </com.google.android.material.appbar.AppBarLayout>
+        </com.google.android.material.appbar.AppBarLayout>-->
 
 
         <!--완료한 즐겨찾기-->
@@ -50,7 +49,7 @@
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
-    <com.google.android.material.navigation.NavigationView
+   <!-- <com.google.android.material.navigation.NavigationView
         android:id="@+id/main_navigationview4"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -59,6 +58,6 @@
         android:backgroundTint="#000000"
         app:headerLayout="@layout/side_bar"
         app:itemTextColor="#ffffff"
-        app:menu="@menu/nav_item" />
+        app:menu="@menu/nav_item" />-->
 
 </androidx.drawerlayout.widget.DrawerLayout>
